<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme"
    android:orientation="vertical"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@id/btn_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/trigger_warning"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="84dp"
        android:text="@string/add_message"
        android:textColor="@color/text"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/trigger_keyword"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/trigger_keyword"
        android:textColorHint="#888888"
        android:textSize="15sp"
        android:background="@drawable/round_edge"
        android:backgroundTint="#EEEEEE"/>
    <Button
        android:id="@id/btn_confirm"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="98dp"
        android:background="@drawable/round_edge"
        android:backgroundTint="@color/white"
        android:text="@string/confirm"
        android:textSize="20sp" />
</LinearLayout>