<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme"
    android:orientation="vertical"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_change"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/password_confirm"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm2"
                android:textColor="@color/text"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="73dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp"
            android:text="@string/password_new"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password_orig_edit"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_round"
            android:backgroundTint="@color/white"
            android:hint="@string/pwd" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="73dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp"
            android:text="@string/password_new"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password_new_edit"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_round"
            android:backgroundTint="@color/white"
            android:hint="@string/pwd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="73dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/password_new_confirm"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password_new_confirm_edit"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edittext_round"
            android:backgroundTint="@color/white"
            android:hint="@string/pwd" />
    </LinearLayout>

</LinearLayout>